# sonic

./: .gitignore  .gitmodules  .licenserc.yaml  CONTRIBUTING.md  INTRODUCTION.md  Makefile  README.md  README_ZH_CN.md  api.go  api_test.go  bench.py  bench.sh  compact_test.go  compat.go  compat_test.go  decode_float_test.go  decode_test.go  encode_test.go  error_test.go  go.mod  go.sum  go.work  go.work.sum  hugestruct_test.go  issue100_test.go  issue101_test.go  issue16_test.go  issue27_test.go  issue39_test.go  issue3_test.go  issue45_test.go  issue58_test.go  issue5_test.go  issue67_test.go  issue76_test.go  issue7_test.go  issue82_test.go  issue83_test.go  issue8_test.go  issue90_test.go  (+10 more)
ast/: api.go  api_amd64.go  api_amd64_test.go  api_compat.go  api_compat_test.go  api_native_test.go  api_not_amd64.go  api_test.go  b64_amd64.go  b64_compat.go  base64.go  base64_amd64.go  base64_arm64.go  base64_compat.go  buffer.go  buffer_test.go  compat_test.go  convert.go  convert_test.go  decode.go  decode_test.go  encode.go  encode_test.go  error.go  iterator.go  iterator_test.go  node.go  node_test.go  parser.go  parser_test.go  raw.go  raw_test.go  search.go  search_test.go  stubs.go  stubs_go115.go  stubs_go120.go  testdata_test.go  utils.go  visitor.go  (+1 more)
compat/: api.go  compat.go  compat_test.go  go.mod  go.sum  sonic.go  utils.go
decoder/: abi_test.go  assembler_amd64.go  assembler_amd64_go115.go  assembler_amd64_go116.go  assembler_amd64_go117.go  assembler_test.go  compiler.go  compiler_test.go  debug.go  debug_go116.go  debug_go117.go  decoder.go  decoder_amd64.go  decoder_amd64_test.go  decoder_compat.go  decoder_compat_test.go  decoder_native.go  decoder_native_test.go  decoder_test.go  errors.go  errors_test.go  generic.go  generic_amd64.go  generic_amd64.s  generic_amd64_go115.go  generic_amd64_go116.go  generic_amd64_go117.go  generic_amd64_go117_test.s  generic_amd64_test.s  generic_test.go  generic_test.s  interpreter_test.go  norace_test.go  pools.go  primitives.go  stream.go  stream_test.go  stubs.go  stubs_go115.go  stubs_go120.go  (+4 more)
dev/: Makefile  dev.go  dev_decode_float_test.go  dev_decode_test.go  dev_encode_test.go  dev_test.go  testdata_test.go
dev/rs_wrapper/: .gitignore  Cargo.toml
dev/rs_wrapper/include/: sonic_rs.h  types.h
dev/rs_wrapper/src/: lib.rs
docs/: INTRODUCTION.md  INTRODUCTION_ZH_CN.md  RELEASES.md  RELEASES_ZH_CN.md
encoder/: assembler_amd64.go  assembler_amd64_go115.go  assembler_amd64_go116.go  assembler_amd64_go117.go  assembler_test.go  compiler.go  compiler_test.go  debug.go  debug_go117.go  encoder.go  encoder_amd64.go  encoder_amd64_test.go  encoder_compat.go  encoder_compat_test.go  encoder_native.go  encoder_native_test.go  encoder_test.go  errors.go  errors_test.go  kvsort.go  kvsort_test.go  mapiter.go  number.go  pools.go  primitives.go  sort.go  sort_test.go  stream.go  stream_test.go  stubs.go  stubs_go115.go  stubs_go116.go  stubs_go117.go  stubs_go120.go  testdata_test.go  types.go  utils.go  write_barrier.go
examples/: example_stream_test.go
export/: api.go  go.mod
external_jsonlib_test/: go.mod  go.sum  go.work  issue_test.go
fuzz/: Makefile  ast_fuzz_test.go  compat_amd64_test.go  compat_other.go  corpus.go  fuzz_test.go  go.mod  go.sum  other_fuzz_test.go  struct_fuzz_test.go
generic_test/: benchmark_test.go  go.mod  go.sum  sonic_test.go  testdata_test.go
internal/: const.go  errors.go  helper.go  metrics.go  native.go  native_test.go  node.go
issue_test/: biz_test.go  common_test.go  error_test.go  go.mod  go.sum  hugestruct_test.go  issue100_test.go  issue101_test.go  issue107_test.go  issue108_test.go  issue112_test.go  issue113_test.go  issue115_test.go  issue119_test.go  issue123_test.go  issue128_test.go  issue138_test.go  issue141_test.go  issue144_test.go  issue16_test.go  issue182_test.go  issue186_test.go  issue195_test.go  issue206_test.go  issue213_test.go  issue242_test.go  issue246_test.go  issue248_test.go  issue258_test.go  issue263_test.go  issue273_test.go  issue27_test.go  issue293_test.go  issue379_test.go  issue381_test.go  issue390_test.go  issue39_test.go  issue3_test.go  issue406_test.go  issue437_test.go  (+51 more)
licenses/: LICENSE-eisel_lemire  LICENSE-simdjson  LICENSE-xxhash
loader/: cwrapper.go  cwrapper_c.go  cwrapper_test.go  funcdata.go  funcdata_amd64.go  funcdata_arm64.go  funcdata_compat.go  funcdata_go115.go  go.mod  (+33 more)
tools/asm2arm_tool/src/: CMakeLists.txt  cal_depth.cpp  cal_depth.h  dump_elf.cpp  dump_elf.h  go_func_parser.h  main.cpp  mc_bundle.cpp  streamer_SL.cpp  utils.cpp  utils.h
(+1071 files in other folders)
