[package]
name = "rs_wrapper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sonic-rs = { git ="https://github.com/cloudwego/sonic-rs", branch = "feat/flatnode" }


[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false

# use dynamic libaray here, to pervent possible relocation errors when gcc linking.
[lib]
crate-type = ["cdylib"]